# vkspecgen

./: .gitignore  README.md  WORKSPACE  run_tests.sh
examples/: vkflat.py  vklayerprint.py
examples/command_tracker/: linear_allocator.h  vk_command_tracker.py
examples/command_tracker/templates/: command_common.cc.jinja2  command_common.h.jinja2  command_printer.cc.jinja2  command_printer.h.jinja2  command_recorder.cc.jinja2  command_recorder.h.jinja2  command_tracker.cc.jinja2  command_tracker.h.jinja2
examples/flatbuffer/: vkflat.py
examples/print_layer/: CMakeLists.txt  vklayerprint.py
examples/print_layer/templates/: dispatch.cc.jinja2  dispatch.h.jinja2  layer_base.cc.jinja2  layerprint.cc.jinja2  vulkan_macros.jinja2
tests/: test_handle_info.py  test_registry.py
vkapi/: BUILD.bazel  __init__.py  handle_info.py  vkapi.py
